syntax = "proto3";
import "google/protobuf/empty.proto";
package dpas.grpc.contract;

service ServiceDPAS {
    rpc register (RegisterRequest) returns (google.protobuf.Empty);
    rpc post (PostRequest) returns (google.protobuf.Empty);
    rpc postGeneral (PostRequest) returns (google.protobuf.Empty);
    rpc read (ReadRequest) returns (ReadReply);
    rpc readGeneral (ReadRequest) returns (ReadReply);
}

//
message RegisterRequest {
    bytes publicKey = 1;
    string username = 2;
}


//
message UserBoardReference {
    int32 sequenceNumber = 1;
    bytes publicKey = 2;
}

//
message GeneralBoardReference {
    int32 sequenceNumber = 1;
}

//
message BoardReference {
    oneof reference {
        GeneralBoardReference generalBoardReference = 1;
        UserBoardReference userBoardReference = 2;
    }
}

//
message PostRequest {
    bytes publicKey = 1;
    string message = 2;
    string username = 3;
    bytes signature = 4;
    repeated BoardReference references = 5;
}


//
message ReadRequest {
    bytes publicKey = 1;
    int32 number = 2;
    string username = 3;
}



//
message ReadReply {
    bytes announcements = 1;
}
